--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -3,7 +3,7 @@ on: [pull_request, push]
 
 jobs:
   kind:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
       - uses: engineerd/setup-kind@v0.5.0
@@ -18,5 +18,6 @@ jobs:
       - name: Apply CRDs
         run: |
            kubectl apply -k https://github.com/iter8-tools/etc3/config/crd/?ref=main
+           kubectl apply -f https://raw.githubusercontent.com/kubeflow/kfserving/master/config/crd/serving.kubeflow.org_inferenceservices.yaml
            kubectl get crds
         
