--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -2,22 +2,17 @@ name: "Test iter8-kfserving handlers"
 on: [pull_request, push]
 
 jobs:
-  kind:
+  iter8-kfserving-handler-scripts:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
       - uses: engineerd/setup-kind@v0.5.0
-      - name: Testing
+      - name: Cluster Info
         run: |
           kubectl cluster-info
-          kubectl get pods -n kube-system
-          echo "current-context:" $(kubectl config current-context)
-          echo "environment-kubeconfig:" ${KUBECONFIG}
-          ls
-          pwd
+          echo "Present working directory: $(pwd)"
       - name: Apply CRDs
         run: |
            kubectl apply -k https://github.com/iter8-tools/etc3/config/crd/?ref=main
            kubectl apply -f https://raw.githubusercontent.com/kubeflow/kfserving/master/config/crd/serving.kubeflow.org_inferenceservices.yaml
-           kubectl get crds
-        
+           kubectl get crds        
