--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: engineerd/setup-kind@v0.5.0
+        with:
+          image: kindest/node:v1.17.11
       - name: Cluster Info
         run: |
           kubectl cluster-info
