--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -4,7 +4,26 @@ on: [pull_request, push]
 jobs:
   iter8-kfserving-handler-scripts:
     runs-on: ubuntu-18.04
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: network=host
+      - name: Build and push to local registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: localhost:5000/iter8/iter8-kfserving:latest
+      - name: Inspect
+        run: |
+          docker buildx imagetools inspect localhost:5000/iter8/iter8-kfserving:latest
       - uses: actions/checkout@master
       - uses: engineerd/setup-kind@v0.5.0
         with:
@@ -29,4 +48,16 @@ jobs:
            echo "Inference Service"
            kubectl get inferenceservice/sklearn-iris -n kfserving-test
            kubectl get experiment/sklearn-iris-experiment-1 -n kfserving-test
+
+
+name: ci
+
+on:
+  push:
+    branches: master
+
+jobs:
+  local-registry:
+    runs-on: ubuntu-latest
+           
            
