--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -1,17 +1,19 @@
 name: Build-test-and-push
 
-on:
-  push:
-    # Publish `main` as Docker `latest` image.
-    branches:
-      - main
+# on:
+#   push:
+#     # Publish `main` as Docker `latest` image.
+#     branches:
+#       - main
 
-    # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
+#     # Publish `v1.2.3` tags as releases.
+#     tags:
+#       - v*
 
-  # Run tests for any PRs.
-  pull_request:
+#   # Run tests for any PRs.
+#   pull_request:
+
+on: [pull_request, push]
 
 env:
   # TODO: Change variable to your image's name.
