test start handler

--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -47,11 +47,21 @@ jobs:
            kubectl create ns kfserving-test
            kubectl apply -f samples/common/sklearn-iris.yaml -n kfserving-test
            kubectl apply -f samples/experiments/example1.yaml -n kfserving-test
+      - name: Create namespace and RBACs for start handler to run
+      - name: Fix and launch start handler 
            export EXPERIMENT_NAME=sklearn-iris-experiment-1
            export EXPERIMENT_NAMESPACE=kfserving-test
-           source handlers/scripts/start.sh
-           echo "Inference Service"
+           START_HANDLER_FILE=resources/configmaps/handlers/start.yaml
+           sed -i 's/YOUR_IMAGE/${IMAGE_NAME}/g' ${START_HANDLER_FILE}
+           sed -i 's/YOUR_IMAGE/${EXPERIMENT_NAME}/g' ${START_HANDLER_FILE}
+           sed -i 's/YOUR_IMAGE/${EXPERIMENT_NAMESPACE}/g' ${START_HANDLER_FILE}
+           echo "Fixed start handler"
+           cat ${START_HANDLER_FILE}
+           kubectl apply -f resources/configmaps/handlers/start.yaml -n iter8-system
+      - name: Check InferenceService and Experiment objects
+           echo "InferenceService object"
            kubectl get inferenceservice/sklearn-iris -n kfserving-test
+           echo "Experiment object"
            kubectl get experiment/sklearn-iris-experiment-1 -n kfserving-test          
 
   # # Push image to GitHub Packages.
