sleep after crd apply

--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -42,6 +42,8 @@ jobs:
            kubectl apply -k https://github.com/iter8-tools/etc3/config/crd/?ref=main
            kubectl apply -f https://raw.githubusercontent.com/kubeflow/kfserving/master/config/crd/serving.kubeflow.org_inferenceservices.yaml
            kubectl get crds
+           sleep 10
+        # sleep is the cheap version of CRD health check -- which doesn't seem to exist in k8s
       - name: Setup experiment and Inference Service
         run: |
            kubectl create ns kfserving-test
