wait for CRDs to be ready

--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -28,21 +28,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build image
-        run:  |
-          docker build . --tag $IMAGE_NAME
+        run: docker build . --tag $IMAGE_NAME
       - uses: engineerd/setup-kind@v0.5.0
         with:
           image:  kindest/node:v1.17.11
-      - name: Print cluster info and pwd
-        run:  |
-          kubectl cluster-info
-          echo "Present working directory: $(pwd)"
       - name: Apply CRDs
         run:  |
           kubectl apply -k https://github.com/iter8-tools/etc3/config/crd/?ref=main
           kubectl apply -f https://raw.githubusercontent.com/kubeflow/kfserving/master/config/crd/serving.kubeflow.org_inferenceservices.yaml
-          kubectl get crds
-          sleep 10
+          kubectl wait --for=condition=Established crds --timeout=5m
         # sleep is the cheap version of CRD health check -- which doesn't seem to exist in k8s
       - name: Setup experiment and Inference Service
         run:  |
