--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -15,10 +15,6 @@ name: Build-test-and-push
 
 on: [pull_request, push]
 
-env:
-  IMAGE_NAME: iter8-kfserving
-  ITER8_SYSTEM_NAMESPACE: iter8-system
-
 jobs:
   # Run tests.
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
@@ -27,38 +23,37 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: karancode/kustomize-github-action@master
+      - uses: imranismail/setup-kustomize@v1
         with:
-          kustomize_version: '3.0.0'
+          kustomize-version: "3.1.0"
       - name: Build image
-        run: docker build . --tag $IMAGE_NAME
+        run: docker build . --tag iter8-kfserving
       - uses: engineerd/setup-kind@v0.5.0
         with:
-          image:  kindest/node:v1.17.11
+          image: kindest/node:v1.17.11
       - name: Apply CRDs
-        run:  |
+        run: |
           kubectl apply -k https://github.com/iter8-tools/etc3/config/crd/?ref=main
           kubectl apply -f https://raw.githubusercontent.com/kubeflow/kfserving/master/config/crd/serving.kubeflow.org_inferenceservices.yaml
           kubectl wait --for=condition=Established crds --all --timeout=5m
         # sleep is the cheap version of CRD health check -- which doesn't seem to exist in k8s
       - name: Setup experiment and Inference Service
-        run:  |
+        run: |
           kubectl create ns kfserving-test
           kubectl apply -f samples/common/sklearn-iris.yaml -n kfserving-test
           kubectl apply -f samples/experiments/example1.yaml -n kfserving-test
-          kubectl create ns ${ITER8_SYSTEM_NAMESPACE}
+          kubectl create ns iter8-system
           kustomize build tests/integration/rbacs | kubectl apply -f -
+      - name: Get yq
+        run: snap install yq
       - name: Fix and launch start handler
-        run:  |
-          export EXPERIMENT_NAME=sklearn-iris-experiment-1
-          export EXPERIMENT_NAMESPACE=kfserving-test
-          export START_HANDLER_FILE=resources/configmaps/handlers/start.yaml
-          sed -i -e "s/ITER8_SYSTEM_NAMESPACE/${ITER8_SYSTEM_NAMESPACE}/g" ${START_HANDLER_FILE}
-          sed -i -e "s/YOUR_IMAGE/${IMAGE_NAME}/g" ${START_HANDLER_FILE}
-          sed -i -e "s/YOUR_EXPERIMENT_NAMESPACE/${EXPERIMENT_NAMESPACE}/g" ${START_HANDLER_FILE}
-          sed -i -e "s/YOUR_EXPERIMENT_NAME/${EXPERIMENT_NAME}/g" ${START_HANDLER_FILE}
+        run: |
+          cp resources/configmaps/handlers/start.yaml tests/integration/handlers/start.yaml
+          yq w -i tests/integration/handlers/start.yaml spec.template.spec.containers[0].image iter8-kfserving
+          yq w -i tests/integration/handlers/start.yaml spec.template.spec.containers[0].env[0].value kfserving-test
+          yq w -i tests/integration/handlers/start.yaml spec.template.spec.containers[0].env[1].value sklearn-iris-experiment-1
           echo "Fixed start handler"
-          cat ${START_HANDLER_FILE}
+          cat tests/integration/handlers/start.yaml
           echo "Creating start handler job ... "
           kubectl apply -f resources/configmaps/handlers/start.yaml -n iter8-system
           sleep 30
