--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -60,20 +60,13 @@ jobs:
 
           echo "Fixed start handler"
           cat tests/integration/handlers/start.yaml
+
           echo "Creating start handler job ... "
           kubectl apply -f tests/integration/handlers/start.yaml -n iter8-system
           sleep 30
           echo ""
-          echo "Job report 1"
-          kubectl get job/start -n iter8-system -o yaml
-          sleep 30
-          echo ""
-          echo "Job report 2"
-          kubectl get job/start -n iter8-system -o yaml
-          sleep 30
-          echo ""
-          echo "Job report 3"
-          kubectl get job/start -n iter8-system -o yaml
+          echo "Job logs"
+          kubectl logs --selector job-name=start -n iter8-system
           kubectl wait --for=condition=complete job/start -n iter8-system --timeout=60s
       - name: Check InferenceService and Experiment objects
         run: |
